mise en cache de la liste des téléphones + readme
